--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,66 +1,59 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-body, tw-story {
+body {
     background-image: url("assets/colonists.jpg");
-    color: #839496;
+    color: #394565;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.1em;
-
+    height: 100%;
+    width: 100%;
 }
 
 h2 {
-    color: #000000;
+    color: #394565;
 }
 
-tw-passage {
+#story {
     background-color: #e7c19c;
     border-radius: 10px;
     padding: 1em 3em 3em;
     box-shadow: 0 1px 3px #000000;
 }
 
-tw-sidebar {
+#ui-bar {
     background: #e7c19c;
     border-radius: 10px;
     box-shadow: 0 1px 3px #000000;
 }
 
-/* LINKS */
+#ui-bar-tray {
+    position: absolute;
+    top: .5em;
+    left: 0;
+    right: 0;
+}
 
-.enchantment-link, tw-link, a {
+#story-title {
+    margin: 20px 0 0;
+}
+
+#ui-bar-history [id|=history]:disabled {
+    color: #999;
+    background-color: transparent;
+    border-color: #999;
+}
+
+.passage a {
     color: #cb4b16;
     font-weight: bold;
-
 }
 
-.enchantment-link:visited, tw-link:visited, .enchantment-link.visited, tw-link.visited, a:visited {
-    color: #268bd2;
+.passage a:hover {
+    color: #cb4b16;
     font-weight: bold;
+    text-decoration: underline;
 }
-
-.enchantment-link:hover, tw-link:hover, a:hover .visited:hover {
-    color: #cb4b16 !important;
-    font-weight: bold;
-    text-decoration-line: underline;
-}
-
-
-/* EFFECTS */
-@keyframes pulsein {
-    from { color: #00fbf7; text-shadow: 0 0 1em #00fbf7; }
-    to { color: #ADC3D8; text-shadow: 0 0; }
-}
-.pulse-in {
-    color: #ADC3D8;
-    font-size: 1.1em;
-    animation: pulsein 1.2s linear 3;
-}
-span.pulse-in {
-    font-size: inherit;
-}
-
-/* IMAGE STYLES */
 
 img {
     /* for example */
@@ -76,33 +69,14 @@ img.full-width {
 
 /*
 	TABLET-SPECIFIC RULES / SMALL WIDTH BROWSERS
-*/
+
 @media only screen
 and (min-device-width : 768px)
-and (max-device-width : 1024px)
-{
-
-    tw-story {
-        font-size: 1em;
-        width: 100%;
-        max-width: 95%;
-        margin: 0 auto 0 auto;
-    }
-
-}
+and (max-device-width : 1024px) { }
+*/
 
 /*
 	MOBILE-SPECIFIC RULES
 
-	You often want to make fonts much larger.
+@media only screen and (max-device-width: 767px) { }
 */
-@media only screen and (max-device-width: 767px) {
-
-    tw-story {
-        font-size: 3.2em;
-        width: 55em;
-        margin: 0 auto 0 auto;
-        padding: 20% 5%;
-    }
-
-}
