Styling updates * Replaced favicon with mars image * Added mars.png * Added the bleached sugarcube stylesheet * Made some overrides in app.css to   - Add top/bottom right border radius to ui-bar   - Reduce padding on ui-bar-body   - Increase the size of the forward/back buttons so they're easy to hit   - Added the mars image background to the story-banner above story title   - Added nav and nav/section classes and special styling for links within * Updated most of the passages with markup that uses the nav/section divs for formatting navigation links

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,21 +10,14 @@ body {
     width: 100%;
 }
 
-h2 {
-    color: #394565;
-}
-
-#story {
-    background-color: #e7c19c;
-    border-radius: 10px;
-    padding: 1em 3em 3em;
-    box-shadow: 0 1px 3px #000000;
-}
-
 #ui-bar {
-    background: #e7c19c;
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     box-shadow: 0 1px 3px #000000;
+}
+
+#ui-bar-body {
+    padding: 0 1em;
 }
 
 #ui-bar-tray {
@@ -34,14 +27,50 @@ h2 {
     right: 0;
 }
 
+#ui-bar-history {
+    display: flex;
+    width: 85%;
+    align-content: stretch;
+    margin-left: 6px;
+}
+
+#ui-bar-history [id|=history] {
+    flex-grow: 3;
+}
+
+#ui-bar-history [id|=history]:not(:first-child) {
+    margin-left: 0;
+}
+
+#story-banner {
+    background-image: url('assets/mars.png');
+    height: 270px;
+}
 #story-title {
     margin: 20px 0 0;
 }
 
-#ui-bar-history [id|=history]:disabled {
-    color: #999;
-    background-color: transparent;
-    border-color: #999;
+#ui-dialog {
+    user-select: none;
+}
+
+#ui-dialog-title {
+    text-align: unset;
+}
+
+#story {
+    background-color: #e7c19c;
+    border-radius: 10px;
+    padding: 1em 3em 3em;
+    box-shadow: 0 1px 3px #000000;
+}
+
+#text {
+    color: #394565 !important;
+}
+
+.passage {
+    color: #394565;
 }
 
 .passage a {
@@ -55,28 +84,47 @@ h2 {
     text-decoration: underline;
 }
 
-img {
-    /* for example */
-    /* border: 1px solid black; */
+.passage h2 {
+    color: #cb4b16;
 }
 
-img.full-width {
-    display:block; margin-right:auto; margin-left:auto;
-    width: 100%;
+.passage .nav {
+    background-color: #ccc;
+    border-radius: 10px;
+    padding: .5em;
+    box-shadow: inset 0 1px 3px #000000;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 2em;
+}
+.passage .nav .section {
+    color: #ccc;
+    font-size: 1.2em;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #394565;
+    border-radius: 5px;
+    line-height: 1.5em;
 }
 
+.passage .nav a {
+    border: 1px solid;
+    font-size: 1em;
+    border-radius: 5px;
+    padding: 3px;
+    color: #394565;
+    white-space: nowrap;
+    line-height: 1.5em;
 
+}
 
-/*
-	TABLET-SPECIFIC RULES / SMALL WIDTH BROWSERS
-
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) { }
-*/
-
-/*
-	MOBILE-SPECIFIC RULES
-
-@media only screen and (max-device-width: 767px) { }
-*/
+.passage .nav a:hover {
+    border-color: #cb4b16;
+    text-decoration: none;
+    background-color: #cb4b16;
+    color: #ccc;
+}
