* Added ExampleDialogue.twee, an example setup and display of the DialogueWidget. * Added DialogueWidget.twee, a widget to manage a dialogue with another character. * In app.css, added styling for DialogueWidget

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -129,3 +129,17 @@ body {
     background-color: #cb4b16;
     color: #ccc;
 }
+
+/* Dialogue Widget */
+#dialogue > div {
+    padding: 0.5em 0;
+}
+div.choice {
+    font-weight: bold;
+}
+ul.choices {
+    list-style: none;
+}
+q {
+    quotes: "“" "”" "‘" "’";
+}
