Refactored dialogue widget to not require text in the _dialogue object, but to be added as text in a switch in a child passage

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -131,15 +131,15 @@ body {
 }
 
 /* Dialogue Widget */
-#dialogue > div {
+#dialoguebox > div {
     padding: 0.5em 0;
 }
-div.choice {
-    font-weight: bold;
+#dialoguebox > div.choice {
+    font-style: italic;
 }
-ul.choices {
-    list-style: none;
+#dialoguebox > ul.choices {
+    list-style: disc;
 }
-q {
+#dialoguebox > q {
     quotes: "“" "”" "‘" "’";
 }
