--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,3 @@
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
 body {
     background-image: url("assets/colonists.jpg");
     color: #394565;
@@ -49,6 +46,7 @@ body {
 }
 #story-title {
     margin: 20px 0 0;
+    font-family: 'Russo One', sans-serif;
 }
 
 #ui-dialog {
