* Massive refactor of project twee folders to support common and episode specific files * Added some scenes in episode 1 * Moved example scene to example episode * Added plot / plot-evaluator macros * Updated gulpfile with new project modules folder location * In package.json,   - added "episode" to "config"   - modified tweego commands to use config.episode for episodic content

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -64,10 +64,6 @@ body {
     box-shadow: 0 1px 3px #000000;
 }
 
-#text {
-    color: #394565 !important;
-}
-
 .passage {
     color: #394565;
 }
@@ -117,7 +113,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     border-radius: 5px;
-    padding: 0px;
+    padding: 0;
     margin: 2px;
 }
 
