--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,7 +1,9 @@
 body {
-    background-image: url("assets/colonists.jpg");
+    background-image: url("assets/mars-sand.png");
+    background-attachment: fixed;
+    background-repeat: repeat;
     color: #394565;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-size: 1.1em;
     height: 100%;
     width: 100%;
@@ -12,10 +14,41 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0 1px 3px #000000;
+    background-image: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
 }
 
 #ui-bar-body {
     padding: 0 1em;
+}
+
+#menu ul {
+    border: 0;
+    display: flex;
+    justify-content: center;
+}
+
+#menu li a {
+    border: 0;
+    font-size: 1em;
+    border-radius: 5px;
+    padding: 10px;
+    color: #394565 !important;
+    white-space: nowrap;
+    line-height: 1em;
+    font-family: 'Montserrat', sans-serif;
+    flex-grow: 1;
+    flex-basis: auto;
+}
+
+#menu li:not(:first-child) {
+    border-top: 0;
+}
+
+#menu li a:hover {
+    border-color: #cb4b16 !important;
+    text-decoration: none;
+    background-color: #cb4b16 !important;
+    color: #ccc !important;
 }
 
 #ui-bar-tray {
@@ -44,21 +77,95 @@ body {
     background-image: url('assets/mars.png');
     height: 270px;
 }
+
 #story-title {
     margin: 20px 0 0;
+    font-family: 'Russo One', sans-serif;
+    font-size: 2em;
+    background-color: #565656;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.25);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+
+}
+
+#story-subtitle {
+    margin: 0;
+}
+
+#story-subtitle p {
+    margin: 0;
     font-family: 'Russo One', sans-serif;
 }
 
 #ui-dialog {
     user-select: none;
+    border-radius: 10px;
 }
 
+#ui-dialog-titlebar {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
 #ui-dialog-title {
     text-align: unset;
+    box-shadow: 0 1px 3px #000000;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+#ui-dialog-body {
+    background-image: linear-gradient(to top, lightgrey 0%, #e0e0e0 10%, #efefef 48%, #d9d9d9 85%, #bcbcbc 100%);
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+#ui-dialog-close {
+    border-top-right-radius: 10px;
+    height: 100%;
+    margin: 0;
+}
+
+#ui-dialog-body {
+    border: 0;
+    box-shadow: 0 1px 3px #000000;
+}
+
+#ui-dialog-body ul.buttons {
+    text-align: right;
+}
+
+#ui-dialog-body button {
+    border: 1px solid;
+    font-size: 1em;
+    border-radius: 5px;
+    padding: 5px;
+    color: #394565;
+    white-space: nowrap;
+    line-height: 1em;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #ccc;
+}
+
+#ui-dialog-body ul.buttons>li+li>button {
+    margin-left: unset;
+}
+
+#ui-dialog-body button:hover {
+    border-color: #cb4b16;
+    text-decoration: none;
+    background-color: #cb4b16;
+    color: #ccc;
+}
+
+#ui-dialog-body.saves table {
+    margin-top: 5px;
 }
 
 #story {
-    background-color: #e7c19c;
+    background-image: linear-gradient(to top, lightgrey 0%, #e0e0e0 10%, #efefef 48%, #d9d9d9 85%, #bcbcbc 100%);
     border-radius: 10px;
     padding: 1em 3em 3em;
     box-shadow: 0 1px 3px #000000;
@@ -66,6 +173,11 @@ body {
 
 .passage {
     color: #394565;
+}
+
+.passage p {
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .passage a {
@@ -80,7 +192,15 @@ body {
 }
 
 .passage h2 {
-    color: #cb4b16;
+    background-color: #cb4b16;
+    font-size: 2em;
+    margin: 0;
+    font-family: 'Russo One', sans-serif;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.25);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
 
 .passage .nav {
@@ -94,6 +214,8 @@ body {
     justify-content: space-between;
     align-items: center;
     line-height: 2em;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 1em;
 }
 
 .passage .nav .section {
@@ -138,16 +260,8 @@ body {
     color: #ccc;
 }
 
-/* Dialogue Widget */
-#dialoguebox > div {
-    padding: 0.5em 0;
-}
-#dialoguebox > div.choice {
-    font-style: italic;
-}
-#dialoguebox > ul.choices {
-    list-style: disc;
-}
-#dialoguebox > q {
-    quotes: "“" "”" "‘" "’";
+#sceneContainer {
+    margin-bottom: 1em;
+    text-align: justify;
+    hyphens: auto;
 }
